tests/opaque_libdefs/opaque_libdefs.exp
Error: test.js:8
  8: function flowsSomethingToQueue(x: number): Queue { return x; } // Error number ~> Queue
                                                               ^ number. This type is incompatible with the expected return type of
  8: function flowsSomethingToQueue(x: number): Queue { return x; } // Error number ~> Queue
                                                ^^^^^ opaque type `Queue`

Error: test.js:9
  9: function flowsQueueToSomething(q: Queue): number {return q; } // Error Queue ~> number
                                                              ^ opaque type `Queue`. This type is incompatible with the expected return type of
  9: function flowsQueueToSomething(q: Queue): number {return q; } // Error Queue ~> number
                                               ^^^^^^ number

Error: test.js:13
 13: counter_to_number(y); // Error: number ~> Counter
                       ^ number. This type is incompatible with the expected param type of
  8: declare function counter_to_number(c: Counter): number;
                                           ^^^^^^^ opaque type `Counter`. See lib: flow-typed/decls.js:8

Error: test.js:21
 21: function convertNumberToString(x: PolyStack<number>): PolyStack<string> {
                                                 ^^^^^^ number. This type is incompatible with
 21: function convertNumberToString(x: PolyStack<number>): PolyStack<string> {
                                                                     ^^^^^^ string

Error: test.js:21
 21: function convertNumberToString(x: PolyStack<number>): PolyStack<string> {
                                                                     ^^^^^^ string. This type is incompatible with
 21: function convertNumberToString(x: PolyStack<number>): PolyStack<string> {
                                                 ^^^^^^ number

Error: test.js:26
 26: function contraBad(x: Contra<number>): Contra<number | string> {
                                                            ^^^^^^ string. This type is incompatible with
 26: function contraBad(x: Contra<number>): Contra<number | string> {
                                  ^^^^^^ number


Found 6 errors
